--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,7 +11,9 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
+    "bootstrap": "^5.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "5.0.1",
