--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
     "bootstrap": "^5.0.0",
+    "formik": "^2.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
@@ -20,7 +21,8 @@
     "react-scripts": "5.0.1",
     "sass": "^1.62.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
