--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.0.0",
     "formik": "^2.4.1",
     "react": "^18.2.0",
+    "react-auth-kit": "^2.12.2",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
